fix: overflow scroll issue

--- a/traflix-web/src/pages/DirectionPage/DesktopDefault.module.scss
+++ b/traflix-web/src/pages/DirectionPage/DesktopDefault.module.scss
@@ -14,7 +14,7 @@
 
 .cardItemsContainer {
   grid-area: 2 / 1 / 3 / 2;
-  overflow-x: scroll;
+  overflow-y: scroll;
 }
 
 .mapContainer {
