--- a/traflix-web/src/pages/DirectionPage/MobileDefault.module.scss
+++ b/traflix-web/src/pages/DirectionPage/MobileDefault.module.scss
@@ -14,7 +14,6 @@
 
 .cardItemsContainer {
   grid-area: 3 / 1 / 4 / 2;
-  overflow-x: scroll;
 }
 
 .mapContainer {
